# WGF4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appMain.cpp  main.cpp
WGF4/: CMakeLists.txt
WGF4/include/: WGF4.h
WGF4/include/AppWindow/: AppWindow.h  Events.h  WindowParameters.h
WGF4/include/Framework/: Adapter.h  Device.h  DeviceLimits.h  Instance.h
WGF4/include/GraphicObject/: GraphicObject.h
WGF4/include/GraphicObject/BindGroup/: BindGroup.h  BindGroupLayout.h  BindGroupLayoutBuilder.h
WGF4/include/GraphicObject/Buffer/: BaseBuffer.h  Buffer.h  BufferLayout.h
WGF4/include/GraphicObject/Enums/: BlendFactor.h  BlendOperation.h  CompareFunction.h  CullMode.h  FrontFace.h  IndexFormat.h  ShaderStage.h  TexDimension.h  TexSampleType.h  TextureAccess.h  TextureFormat.h  Topology.h
WGF4/include/GraphicObject/Passes/: RenderPass.h  RenderPassFactory.h  ScreenPassFactory.h
WGF4/include/GraphicObject/Pipeline/: Pipeline.h  PipelineLayout.h  RenderPipeline.h
WGF4/include/GraphicObject/PipelineBuilder/: BlendState.h  DepthStencilState.h  PipelineBuilder.h  RenderPipelineBuilder.h
WGF4/include/GraphicObject/Shader/: Shader.h
WGF4/include/GraphicObject/Textures/: DepthTexture.h  Image.h  Texture.h  Texture1D.h  Texture2D.h  Texture2DArray.h  Texture3D.h  TextureView.h
WGF4/include/Logging/: Logging.h  Tracker.h
WGF4/src/: WGF4.cpp
WGF4/src/AppWindow/: AppWindow.cpp
WGF4/src/Framework/: Adapter.cpp  Device.cpp  Instance.cpp
WGF4/src/GraphicObject/BindGroup/: BindGroup.cpp  BindGroupLayoutBuilder.cpp
WGF4/src/GraphicObject/Buffer/: BaseBuffer.cpp  BufferLayout.cpp
WGF4/src/GraphicObject/PipelineBuilder/: PipelineBuilder.cpp  RenderPipelineBuilder.cpp
WGF4/src/GraphicObject/Shader/: Shader.cpp
WGF4/src/GraphicObject/Textures/: Image.cpp  Texture2D.cpp
WGF4/src/Logging/: Logging.cpp
WGF4App/: CMakeLists.txt
WGF4App/dep/imgui-docking/: imconfig.h
WGF4App/dep/imgui-docking/backends/: imgui_impl_wgpu.cpp
WGF4App/include/Application/: Application.h  Scene.h
WGF4App/include/GUI/: Container.h  GUIElement.h  GUIPage.h  GUIStyle.h
WGF4App/include/GUI/Grid/: Grid.h  GridSegment.h
WGF4App/src/Application/: Application.cpp  Scene.cpp
WGF4App/src/GUI/: Container.cpp  GUIPage.cpp
WGF4App/src/GUI/Grid/: Grid.cpp
